style: fixed text align for project page

--- a/Frontend/src/pages/project/list/List.module.css
+++ b/Frontend/src/pages/project/list/List.module.css
@@ -79,6 +79,7 @@
 .projectenCount {
 	margin: 0 0 1rem;
 	font-weight: bold;
+	text-align: left;
 }
 
 .projectenGrid {
